# face_detector_test

./: CEmbng.cpp  CEmbng.h  CMakeLists.txt  CRetina.cpp  CRetina.h  CWarp.cpp  CWarp.h  CYoloV7.cpp  CYoloV7.h  README.md  common.h  face2embng.cpp  face2embng.h  main.cpp  onnx_iterator.h
datasets/: readme.txt
models/: README
